updated activity with footer

--- a/index.html
+++ b/index.html
@@ -149,10 +149,16 @@
                </p>
             </div>  
             <div class="extras">
-              <h3>EXTRAS</h3>
-              <img class="extra1" src="./assets/images/Zorak & Diamond Dallas.jpeg" alt="zorak&diamond">
-              <img class="extra2" src="./assets/images/Musical Bar-B-Que.webp" alt="musicalBarBQ">
-              <img class="extra3" src="./assets/images/Shut up.jpeg" alt="shutup">
+              <h3>EXTRAS</h3>         
+              <div class="extradiv">
+              <a class="video" href="https://www.adultswim.com/videos/space-ghost-coast-to-coast/zorak-diamond-dallas-page-evil-is-only-skin-deep"><img class="extra1" src="./assets/images/Zorak & Diamond Dallas.jpeg" alt="zorak&diamond">Zorak & Diamond Dallas Page: Evil is Only Skin Deep</a>
+            </div>
+              <div class="extradiv">
+                <a class="video" href=https://www.adultswim.com/videos/space-ghost-coast-to-coast/zorak-zingor><img class="extra2" src="./assets/images/Musical Bar-B-Que.webp" alt="musicalBarBQ">Zorak:Zingor</a>
+              </div>
+              <div class="extradiv">
+                <a class="video" href=https://www.adultswim.com/videos/space-ghost-coast-to-coast/shut-up><img class="extra3" src="./assets/images/Shut up.jpeg" alt="shutup">Shut Up</a>
+              </div>
             </div>  
   </div>
  </main>
@@ -160,12 +166,12 @@
   <div>
   <h4>SIGN UP FOR THE ADULT SWIM NEWSLETTER</h4>
  </div>
-     <div>
-     <nav class="navbar navbar-default">
-     <div class="container-fluid">
+     <div class="footer">
+     <nav class="navbar navbar-inverse">
+     <div class="container-fluidfooter"> 
      <div class="navbar-footer">
      </div>
-      <ul class="nav navbar-nav">
+     <ul class="nav navbar-nav footer">
     <li><a href="#">Privacy Policy</a></li>
     <li><a href="#">Ad Choices</a></li>
     <li><a href="#">Do Not Sell My Personal Information</a></li>
@@ -177,7 +183,17 @@
     <li><a href="#">Help</a></li>
     <li><a href="#">Site Map</a></li>
    </ul>
- </footer>
+   <div>
+    <br>
+    <br>
+   <h5>TM & © 2022  Turner Broadcasting System, Inc. All Rights Reserved.
+    TURNER AdultSwim.com is part of Turner Entertainment Digital which is part of the Turner Sports & Entertainment Digital Network. Georgia
+    This project was completed with assistance from the Georgia Film Office, a division of the Georgia Department of Economic Development.
+   </h5>
+   </div>
+  </footer>
+  </div>
+ 
 <!-- </div> -->
 </body>
 </html>
